# lazyopenai

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  python.yml
examples/: add_numbers.py  analyze_text.py  current_time.py  extract_urls.py  math.py  say_hi.py  url.py
examples/async/: add_numbers.py
src/lazyai/: __init__.py
src/lazyopenai/: __init__.py  agent.py  chat.py  client.py  completions.py  embeddings.py  function_schema.py  lazy.py  messages.py  schema.py  test_function_schema.py  types.py
src/lazyopenai/async_api/: __init__.py  agent.py  client.py  lazy.py
src/lazyopenai/types/: __init__.py
tests/: test_schema.py
